--- a/Blog/src/.env
+++ b/Blog/src/.env
@@ -1,3 +1,4 @@
+VITE_BASE_URL=https://blogbackend-l8un.onrender.com
 import React, { useState } from "react";
 import { useQuery } from "@tanstack/react-query";
 import BlogCard from "./BlogCard";
@@ -96,4 +97,4 @@ const BlogPage = () => {
 };
 
 export default BlogPage;
-//  let url = `http://localhost:5000/blogs?page=${page}&limit=${pageSize}`;
+ let url = `http://localhost:5000/blogs?page=${page}&limit=${pageSize}`;
